# mbeditor

./: .env.example  .gitattributes  .gitignore  .skills.json  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  skills-lock.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: mbdoc.py  publish.py  router.py  wechat.py
backend/app/cli/: SKILL.md  __init__.py  __main__.py  client.py  executor.py  formatters.py  main.py  state.py
backend/app/cli/commands/: __init__.py  article.py  config.py  doc.py  image.py  info.py  publish.py  render.py  skill.py
backend/app/core/: config.py
backend/app/models/: mbdoc.py
backend/app/services/: block_registry.py  css_inline.py  document_projector.py  legacy_render_pipeline.py  media_uploader.py  publish_adapter.py  raster_worker.py  render_for_wechat.py  wechat_publisher.py  wechat_sanitize.py  wechat_service.py
backend/app/services/renderers/: base.py  html_renderer.py  image_renderer.py  stub.py  (+3 more)
backend/tests/: test_block_registry.py  test_cli.py  test_demo_article_allowlist.py  test_document_projector.py  test_html_markdown_renderers.py  test_legacy_render_pipeline.py  test_mbdoc_api.py  test_mbdoc_model.py  test_mbdoc_projection_route.py  test_publish_adapter_parity.py  test_publish_support_services.py  test_raster_worker.py  test_render_for_wechat.py  test_sanitize_baseline.py  test_smoke.py  test_svg_raster_renderers.py  test_wechat_proxy.py  test_wechat_safe_sanitizer.py
backend/tests/visual/: infrastructure.py  test_baseline.py  test_cli_article_design.py
(+67 files in other folders)
